--- a/css/styles.css
+++ b/css/styles.css
@@ -11,11 +11,15 @@ ul, ol {
     list-style: none;
 }
 
+button {
+    cursor: pointer;
+}
+
 .logo {
 font-family: "Raleway", sans-serif;
     font-weight: 700;
     font-size: 18px;
-    line-height: 1,17;
+    line-height: 1.17;
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: #4d5ae5;
@@ -49,8 +53,8 @@ font-style: normal;
     color: #434455;
 }
 
-.address-link:hover,
-.address-link:focus {
+.contacts-link:hover,
+.contacts-link:focus {
     color: #404bbf;
 }
 
@@ -68,20 +72,20 @@ background-color: #2e2f42;
 }
 
 .button-order {
- background: #4d5ae5;
+    font-family: "Roboto", sans-serif;
     font-weight: 500;
         font-size: 16px;
         line-height: 1.5;
         letter-spacing: 0.04em;
         text-align: center;
         color: #ffffff;
-            width: 169px;
-            height: 56px;
+        background: #4d5ae5;
 }
 
 .button-order:hover,
 .button-order:focus {
     color: #ffffff;
+    background: #404bbf;
 }
 
 div {
@@ -105,7 +109,7 @@ color: #2e2f42;
 }
 
 .our-team {
-    background: #f4f4fd;
+    background: #ffffff;
 }
 
 .title-team {
@@ -163,6 +167,10 @@ color: #2e2f42;
         color: #434455;
 }
 
+.footer-item {
+    background-color: #2e2f42;
+}
+
 .footer-part {
         font-weight: 400;
         font-size: 16px;
@@ -170,4 +178,8 @@ color: #2e2f42;
         letter-spacing: 0.02em;
         color: #f4f4fd;
         background: #2e2f42;
+}
+
+.logo-part-footer {
+   color:  #f4f4fd;
 }
