add css style button

--- a/css/styles.css
+++ b/css/styles.css
@@ -123,6 +123,10 @@ color: #2e2f42;
         background-color: #ffffff;
 }
 
+.img-our-team {
+    background-color: #ffffff
+}
+
 .name {
         font-weight: 500;
         font-size: 20px;
